--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: lostineconomics.com
+logo: /img/white-rabbit.jpg
+description: An useless and unpurposeful blog
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-minimal
